--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Supabase Configuration
 SUPABASE_URL=https://your-project-url.supabase.co
 SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # Stripe Configuration
 STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key
